--- a/css/style.css
+++ b/css/style.css
@@ -1034,14 +1034,9 @@ a:focus {
     margin: 0; /* Remove default margin */
 }
 
-/* .banner .banner-text p {
+.banner .banner-text p {
     font-size: 18px;
     color: #ffffff;
-}
-
-.count {
-    font-size: 36px; 
-    font-weight: bold; 
 }
 
 .banner .banner-text .btn {
@@ -1056,7 +1051,7 @@ a:focus {
     background: transparent;
     box-shadow: inset 0 0 0 0 #ffffff;
     border-color: #ffffff;
-} */
+} 
 
 
 .banner .section span[data-toggle="counter-up"] {
